Adjust a:visited colour
Made this change ages ago and can't remember for sure why; but I think it was to
improve contrast.

--- a/css/screen.css
+++ b/css/screen.css
@@ -7,7 +7,7 @@ body {
 
 a, a:hover, a:focus { color: rgb(220,55,85); text-decoration: inherit; }
 a[href]:hover, a[href]:focus { text-decoration: underline; }
-a:visited { color: #9E5765; }
+a:visited { color: #ab1835; }
 
 body > header {
 	background: rgb(200,50,80);
