Hack until template looks like the old site
This was fun. Rapid iteration times are amazing for motivation.

Adjust the font sizes to be larger. Maybe not to everyone's taste, but
I'm finding myself sitting further back from the screen as of late, and
reading them is more comfortable. Maybe I'm just older? Maybe I'll
change my mind next time and find it rediculously large. I think the
reason that it's comfortable is that it's clamping the line length. I
wonder why there's a sweet spot for line length? Probably don't want it
too long so that the eye can move vertically for context; something
along the lines of limited memory.

Not sure if Bootstrap 4 has moved on since I cobbled this together (it's
still using Bootstrap 3).

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,47 +1,25 @@
 <!DOCTYPE html>
-<html lang="en-gb">
-
-  {% include head.html %}
-
-  <body class="theme-base-08">
-
-    {% include sidebar.html %}
-
-    <!-- Wrap is the content to shift when toggling the sidebar. We wrap the
-         content to avoid any CSS collisions with our real content. -->
-    <div class="wrap">
-      <div class="masthead">
-        <div class="container">
-          <h3 class="masthead-title">
-            <a href={{ "/" | relative_url }} title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
-          </h3>
-        </div>
-      </div>
-
-      <div class="container content">
-        {{ content }}
-      </div>
+<html lang="en-GB">
+{% include head.html %}
+<body>
+<header>
+    <div class="container">
+        <h1><a href={{ "/" | relative_url }} title="Home">{{ site.title }}</a></h1>
+        {% if page.title == "Home" %}
+        <h2>{{ site.tagline }}</h2>
+        {% else %}
+        <h2>{{ page.title }}</h2>
+        {% endif %}
     </div>
+</header>
 
-    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+<main class="container">
+    <main id="content" class="col-md-8 col-sm-8">
+        {{ content }}
+    </main>
+    <aside class="col-md-4 col-sm-4">{% include sidebar.html %}</aside>
+</main>
 
-    <script>
-      (function(document) {
-        var toggle = document.querySelector('.sidebar-toggle');
-        var sidebar = document.querySelector('#sidebar');
-        var checkbox = document.querySelector('#sidebar-checkbox');
-
-        document.addEventListener('click', function(e) {
-          var target = e.target;
-
-          if(!checkbox.checked ||
-             sidebar.contains(target) ||
-             (target === checkbox || target === toggle)) return;
-
-          checkbox.checked = false;
-        }, false);
-      })(document);
-    </script>
-  </body>
+<footer></footer>
+</body>
 </html>
