--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,8 @@
 <head>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-
+  <meta name="description" content="Profile page and notes for David Robertson, a software engineer with a mathematical background." />
+  <link rel="canonical" href="https://dmrobertson.github.io" />
   <!-- Enable responsiveness on mobile devices-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
@@ -13,7 +14,16 @@
     {% endif %}
   </title>
 
+  <!-- Chrome, Firefox OS and Opera -->
+  <meta name="theme-color" content="#C83250" />
+  <!-- Windows Phone -->
+  <meta name="msapplication-navbutton-color" content="#C83250" />
+  <!-- iOS Safari -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
   <!-- CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href={{ "/assets/css/styles.css" | relative_url }}>
 
   <!-- RSS -->
