--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,35 +1,33 @@
-<!-- Target for toggling the sidebar `.sidebar-checkbox` is for regular
-     styles, `#sidebar-checkbox` for behavior. -->
-<input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
+<nav class="sidebar-nav">
+  <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href={{ "/" | relative_url }}>Home</a>
 
-<!-- Toggleable sidebar -->
-<div class="sidebar" id="sidebar">
-  <div class="sidebar-item">
-    <p>{{ site.description }}</p>
-  </div>
+  {% comment %}
+  The code below dynamically generates a sidebar nav of pages with
+  `layout: page` in the front-matter. See readme for usage.
+  {% endcomment %}
 
-  <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href={{ "/" | relative_url }}>Home</a>
+  {% assign pages_list = site.pages | sort:"url" %}
+  {% for node in pages_list %}
+  {% if node.title != null %}
+  {% if node.layout == "page" %}
+  <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+  {% endif %}
+  {% endif %}
+  {% endfor %}
 
-    {% comment %}
-      The code below dynamically generates a sidebar nav of pages with
-      `layout: page` in the front-matter. See readme for usage.
-    {% endcomment %}
+</nav>
+<hr />
+    <address class="vcard">
+      <a href="images/photo_original.jpg">
+        <img class="img-responsive" src="images/photo_head.jpg" srcset="images/photo_head.jpg 1x,images/photo_head_hires.jpg 2x" alt="Profile photograph from March 2019" />
+      </a>
 
-    {% assign pages_list = site.pages | sort:"url" %}
-    {% for node in pages_list %}
-      {% if node.title != null %}
-        {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
+      <ul>
+        <li class="email"><a href="mailto:david.m.robertson1@gmail.com" title="Personal email address">david.m.robertson1@gmail.com</a></li>
+        <li class="github">GitHub: <a class="url" href="https://github.com/DMRobertson">DMRobertson</a></li>
+        <li class="linkedin">LinkedIn: <a href="https://www.linkedin.com/in/davidmrobertson1">davidmrobertson1</a></li>
+      </ul>
+    </address>
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">Source on GitHub</a>
-  </nav>
+  <footer><a class="sidebar-nav-item" href="{{ site.github.repo }}">Source on GitHub</a>. Opinions my own.</footer>
 
-  <footer>
-    <div class="sidebar-item">Based on the <a href="https://github.com/poole/lanyon">Lanyon</a> theme with my own poor taste sprinkled on top.</div>
-  </footer>
-
-</div>
