--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,21 @@ img {
  - dark mode light mode
  - make the different sections have different colours or something idk
  */
+@media (prefers-color-scheme: dark) {
+    body {
+        background: #222;
+        color: #ddd;
+    }
+
+    a {
+        color: #abf;
+    }
+
+    a:visited {
+        color: #b9d;
+    }
+
+    li.github {
+        list-style-image: url("images/github_light.svg");
+    }
+}
