--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body {
     justify-content: center;
     gap: 1rem;
     background-color: var(--bg-color);
-    min-height: 100vmin;
+    min-height: 100vh;
 }
 
 aside, main {
