--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@
         --text-color: #eee;
         --bg-color: #11130f;
         --bg-color-accent: #0e0d0b;
-        --anchor-color: #76abff;
-        --anchor-visited-color: #9e6fff;
+        --anchor-color: #9cbff7;
+        --anchor-visited-color: #c0a1ff;
         --image-border-color: #888;
     }
 }
